# zkaleido

./: Cargo.toml
.github/workflows/: claude-security-review.yml
adapters/process/guest/: Cargo.toml
adapters/process/guest/src/: entrypoint.rs  env.rs  errors.rs  host.rs  lib.rs
adapters/sp1/host/src/: remote_prover.rs
zkaleido/src/: errors.rs  lib.rs
