[workspace]
resolver = "2"

members = [
  "adapters/native",

  "adapters/process/guest",

  "adapters/risc0/host",
  "adapters/risc0/guest",
  "adapters/risc0/groth16-verifier",

  "adapters/sp1/host",
  "adapters/sp1/guest",
  "adapters/sp1/groth16-verifier",

  "zkaleido",
  "logging",

  # binaries
  "runner",

  # examples
  "examples/fibonacci-composition",
  "examples/fibonacci",
  "examples/groth16-verify-sp1",
  "examples/sha2-chain",
  "examples/schnorr-sig-verify",
]

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"
# rust.missing_docs = "warn" # TODO: we need to enable this in the near future
clippy.allow_attributes = "warn"
clippy.allow_attributes_without_reason = "warn"
clippy.absolute_paths = "warn"
rustdoc.all = "warn"


[workspace.dependencies]
zkaleido = { path = "zkaleido" }
zkaleido-logging = { path = "logging" }
zkaleido-native-adapter = { path = "adapters/native" }
zkaleido-sp1-groth16-verifier = { path = "adapters/sp1/groth16-verifier" }
zkaleido-risc0-groth16-verifier = { path = "adapters/risc0/groth16-verifier" }

fibonacci = { path = "examples/fibonacci" }
fibonacci-composition = { path = "examples/fibonacci-composition" }
sha2-chain = { path = "examples/sha2-chain" }
schnorr-sig-verify = { path = "examples/schnorr-sig-verify" }
groth16-verify-sp1 = { path = "examples/groth16-verify-sp1" }

ssz = { git = "https://github.com/alpenlabs/ssz-gen", tag = "v0.16.0" }

sp1-core-executor = "6.2.1"
sp1-sdk = "6.2.1"
sp1-verifier = "6.2.0"
sp1-zkvm = "6.2.1"

arbitrary = { version = "1.3.2", features = ["derive"] }
async-trait = "0.1.86"
bincode = "1.3"
borsh = { version = "1.6.1", features = ["derive"] }
cfg-if = "1.0.0"
ciborium = "0.2"
hex = { version = "0.4", features = ["serde"] }
k256 = { version = "0.13.4", features = ["schnorr"] }
num-bigint = { version = "0.4", default-features = false }
proptest = "1"
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1", default-features = false }
tracing = "0.1"
