[package]
edition = "2024"
name = "zkaleido-process-guest-env"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
zkaleido.workspace = true

bincode.workspace = true
ciborium.workspace = true
cfg-if.workspace = true
serde.workspace = true
sha2 = { workspace = true, optional = true }
thiserror.workspace = true

[features]
#blake3 = ["sp1-zkvm/blake3"]
#zkvm-verify = ["sp1-zkvm/verify", "sha2"]
mock-verify = []
